force-app/main/default/objects/Retail_Campaign_Products__c/Retail_Campaign_Products__c.object-meta.xml
<CustomObject>
    <label>Retail Campaign Products</label>
    <nameField>
        <displayFormat>RCP-{0000}</displayFormat>
        <label>Retail Campaign Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Campaign Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>