force-app/main/default/objects/Retail_Campaign_Products__c/fields/RTL_Campaign__c.field-meta.xml
<CustomField>
    <fullName>RTL_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Retail Campaign Products</relationshipLabel>
    <relationshipName>Retail_Campaign_Products</relationshipName>
    <type>Lookup</type>
</CustomField>