force-app/main/default/objects/Retail_Campaign_Products__c/fields/RTL_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bancassurance</fullName>
            </value>
            <value>
                <fullName>Credit Card &amp; RDC</fullName>
            </value>
            <value>
                <fullName>Deposit</fullName>
            </value>
            <value>
                <fullName>Investment</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>