force-app/main/default/objects/Retail_Campaign_Products__c/fields/RTL_Retail_Product_Master__c.field-meta.xml
<CustomField>
    <fullName>RTL_Retail_Product_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retail Product Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RTL_product_master__c.Product_Group__c</field>
            <operation>equals</operation>
            <valueField>$Source.RTL_Product_Group__c</valueField>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.Product_Sub_group__c</field>
            <operation>equals</operation>
            <valueField>$Source.RTL_Sub_Group__c</valueField>
        </filterItems>
        <filterItems>
            <field>RTL_product_master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>RTL_product_master__c</referenceTo>
    <relationshipLabel>Retail Campaign Products</relationshipLabel>
    <relationshipName>Retail_Campaign_Products</relationshipName>
    <type>Lookup</type>
</CustomField>