force-app/main/default/objects/Retail_Campaign_Products__c/fields/RTL_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>RTL_Sub_Group__c</fullName>
    <label>Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RTL_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Life</fullName>
            </value>
            <value>
                <fullName>Non Life</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>RDC</fullName>
            </value>
            <value>
                <fullName>NON TRANSACTIONAL</fullName>
            </value>
            <value>
                <fullName>TRANSACTIONAL</fullName>
            </value>
            <value>
                <fullName>MM</fullName>
            </value>
            <value>
                <fullName>NON MM</fullName>
            </value>
            <value>
                <fullName>Personal Loan</fullName>
            </value>
            <value>
                <fullName>Secured Loan</fullName>
            </value>
            <value>
                <fullName>Home Loan</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Commercial products</fullName>
            </value>
            <value>
                <fullName>Up-selling</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>MIXED</fullName>
            </value>
            <value>
                <fullName>BOND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>